added pages files i think i will need in the future. grabed dom elements from quest html. added form to home html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,30 @@
     </header>
     <main>
         <section class="main-section">
+            <form>
+                <label>
+                    Name
+                    <input name="name">
+                </label>
+                <label>
+                    Water
+                    <input type="radio" name="element" value="water">
+                </label>
+                <label>
+                    Earth
+                    <input type="radio" name="element" value="earth">
+                </label>
+                <label>
+                    Fire
+                    <input type="radio" name="element" value="fire">
+                </label>
+                <label>
+                    Air
+                    <input type="radio" name="element" value="air">
+                </label>
+                <button>Submit</button>
+            </form>
+        </section>
 
     </main>
     <footer>
