--- a/map/index.html
+++ b/map/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="./map.css">
+
+
     <title>Document</title>
 </head>
 
