added another type of state to track, cp. all functions running smoothly

--- a/quest/index.html
+++ b/quest/index.html
@@ -25,6 +25,12 @@
             <form>
 
             </form>
+            <div id="results">
+                <span id="results-span"></span>
+                <br>
+                <button id="back-to-map">Back to Map!</button>
+
+            </div>
         </section>
 
 
