--- a/results/index.html
+++ b/results/index.html
@@ -21,6 +21,9 @@
             Results!
             <h3 id="story-display"></h3>
         </section>
+        <div>
+            <button id="reset">Return to Start</button>
+        </div>
 
 
     </main>
