added final css

--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@200;300&display=swap"
+        rel="stylesheet">
+
+
     <title>Document</title>
 </head>
 
 <body>
     <header>
-
+        <div class="title">
+            Aang's Awesome Avatar Adventure Quest!
+        </div>
     </header>
     <main>
         <section class="main-section">
@@ -23,6 +32,8 @@
                     Name
                     <input name="name">
                 </label>
+                <span class="bend-choice-text">Choose your bending style</span>
+                <p></p>
                 <label>
                     Water
                     <input type="radio" name="element" value="water">
