--- a/results/index.html
+++ b/results/index.html
@@ -18,10 +18,10 @@
     </header>
     <main>
         <section class="main-section">
-            Results!
+
             <h3 id="story-display"></h3>
         </section>
-        <div>
+        <div class="button">
             <button id="reset">Return to Start</button>
         </div>
 
