--- a/map/index.html
+++ b/map/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="./map.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@200;300&display=swap"
+        rel="stylesheet">
 
 
     <title>Document</title>
