--- a/quest/index.html
+++ b/quest/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="./quest.css">
+
     <title>Document</title>
 </head>
 
@@ -18,7 +20,7 @@
     </header>
     <main>
         <section class="main-section">
-            quest!
+
             <h1></h1>
             <img />
             <p></p>
